<resources>

    <string name="app_name">android-mvp-demo</string>

    <!--system -->
    <string name="exit_hint">再次点击返回键将退出应用</string>
    <string name="connect_exception">网络连接超时！请检查网络设置。</string>
    <string name="data_exception">数据传输出错！请重试。</string>
    <string name="else_exception">网络连接出错！请稍后重试。</string>

    <!--permission-->
    <string name="permisssion_grant">授权成功</string>
    <string name="permisssion_failed">%1$s\n权限获取失败，请打开相应权限</string>

    <!--address book-->
    <string name="notify_no_phone_number">请选择有效的通讯录</string>

    <!--alert dialog-->
    <string name="notice">提示</string>
    <string name="confirm">确定</string>
    <string name="cancle">取消</string>

    <!--upgrade-->
    <string name="update_title">发现新版本：%1$s - v%2$s</string>
    <string name="update_cancle">忽略该版</string>
    <string name="update_confirm">立即更新</string>
    <string name="downloading">正在下载更新...</string>
    <string name="update_done">更新完成</string>

    <!--业务类-->
    <string name="test_act_title">测试页面</string>
    <string name="test_act_et_hint">请输入WEB页面地址</string>
    <string name="test_act_btn_des">点击跳转页面</string>
    <string name="test_act_fun_1">浏览器功能</string>
    <string name="test_act_fun_2">身份证拍照功能</string>
    <string name="test_act_fun_3">相机功能</string>
    <string name="test_act_fun_4">通讯录功能</string>
    <string name="test_act_fun_5">拨打电话功能</string>
    <string name="test_act_fun_6">本地设备信息爬取</string>

    <!--身份照拍照-->
    <string name="hint_front">拍摄人像面，请对齐边缘</string>
    <string name="hint_back">拍摄国徽面，请对齐边缘</string>

</resources>
