<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_size_20"
        android:layout_marginTop="@dimen/common_size_20"
        android:text="@string/test_act_title"
        android:textSize="@dimen/common_text_size_18" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/common_size_20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_size_10"
                android:text="@string/test_act_fun_1"
                android:textSize="@dimen/common_text_size_16" />

            <Button
                android:id="@+id/btn_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_size_10"
                android:text="@string/test_act_fun_2"
                android:textSize="@dimen/common_text_size_16" />

            <Button
                android:id="@+id/btn_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_size_10"
                android:text="@string/test_act_fun_3"
                android:textSize="@dimen/common_text_size_16" />

            <Button
                android:id="@+id/btn_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_size_10"
                android:text="@string/test_act_fun_4"
                android:textSize="@dimen/common_text_size_16" />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_size_10"
                android:text="@string/test_act_fun_5"
                android:textSize="@dimen/common_text_size_16" />

            <Button
                android:id="@+id/btn_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_size_10"
                android:text="@string/test_act_fun_6"
                android:textSize="@dimen/common_text_size_16" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>