<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lLayout_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/common_size_20"
    android:layout_marginRight="@dimen/common_size_20"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/view_alert_dialog_title_border"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_size_15"
            android:layout_marginTop="@dimen/common_size_15"
            android:layout_marginRight="@dimen/common_size_15"
            android:gravity="center"
            android:text="@string/notice"
            android:textColor="@color/black"
            android:textSize="@dimen/common_text_size_18"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_size_15"
            android:layout_marginTop="@dimen/common_size_15"
            android:layout_marginRight="@dimen/common_size_15"
            android:gravity="center"
            android:text="@string/notice"
            android:textColor="@color/lightBlack"
            android:textSize="@dimen/common_text_size_16" />

        <View
            android:id="@+id/split_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_size_1"
            android:layout_marginTop="@dimen/common_size_15"
            android:background="@color/lineGrey" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/view_alert_dialog_btn_border"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_neg"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/common_size_45"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancle"
            android:textColor="@color/lightBlack"
            android:textSize="@dimen/common_text_size_16" />

        <View
            android:id="@+id/img_line"
            android:layout_width="@dimen/common_size_1"
            android:layout_height="@dimen/common_size_45"
            android:background="@color/lineGrey" />

        <Button
            android:id="@+id/btn_pos"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/common_size_45"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/lightBlue"
            android:textSize="@dimen/common_text_size_16" />

    </LinearLayout>

</LinearLayout>